@startuml

hide circle
skinparam classAttributeIconSize 0

class PatientFeedbackReportList {
    +void generateReportList()
}

class PatientFeedbackReport {
    +double getAvgFeedbackScore()
}

class Patient {
    +Name getName()
}

class Appointment {
    +Integer getFeedbackScore()
}

class Model {
    +updateFilteredAppointmentList()

}

class Logic {
    +updateFilteredAppointmentList()
}

 class ListPanel {

 }

PatientFeedbackReport -->"1" Patient : contains
PatientFeedbackReport -->"*" Appointment : contains

PatientFeedbackReportList -->"*" PatientFeedbackReport

Model -->"1" PatientFeedbackReportList

Logic -->"1" Model

ListPanel -->"1" Logic



@enduml
